--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.5.3",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
+    "react-burger-menu": "^3.0.3",
     "react-dom": "^17.0.1",
     "react-items-carousel": "^2.8.0",
     "react-router-dom": "^5.2.0",
