--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react-burger-menu": "^3.0.3",
     "react-dom": "^17.0.1",
     "react-items-carousel": "^2.8.0",
+    "react-multilevel-sidebar": "^1.0.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-transition-group": "^4.4.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
