--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^1.4.3",
     "react-burger-menu": "^3.0.3",
     "react-dom": "^17.0.1",
+    "react-flip-move": "^3.0.4",
     "react-items-carousel": "^2.8.0",
     "react-multilevel-sidebar": "^1.0.4",
     "react-router-dom": "^5.2.0",
